--- a/raah/website/templates/index.html
+++ b/raah/website/templates/index.html
@@ -1,340 +1,7 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="{% static 'website/images/icons/favicon.png' %}" />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/vendor/bootstrap/css/bootstrap.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
-      integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/fonts/iconic/css/material-design-iconic-font.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/fonts/linearicons-v1.0.0/icon-font.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/vendor/animate/animate.css' %}" />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/vendor/css-hamburgers/hamburgers.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/vendor/animsition/css/animsition.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/vendor/select2/select2.min.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/vendor/daterangepicker/daterangepicker.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/vendor/slick/slick.css' %}" />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/vendor/MagnificPopup/magnific-popup.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'website/vendor/perfect-scrollbar/perfect-scrollbar.css' %}"
-    />
-    <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/util.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/main.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/form.css' %}" />
-    <!--===============================================================================================-->
 
-    <style>
-      /* .modal-open .container-fluid,
-            .modal-open .container {
-                -webkit-filter: blur(5px) grayscale(90%);
-            } */
-      .modal {
-        z-index: 1100;
-        /* background:white; */
-        background-color: rgba(0, 0, 0, 0.7);
-      }
-      input[type="email"]:focus {
-        border: 2px solid rgb(162, 187, 235);
-      }
-      input[type="password"]:focus {
-        border: 2px solid rgb(162, 187, 235);
-      }
-      input[type="text"]:focus {
-        border: 2px solid rgb(162, 187, 235);
-      }
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-      body {
-        background: rgb(219, 226, 226);
-      }
-      .login-modal-content {
-        background: none;
-        border-radius: 30px;
-        box-shadow: none;
-      }
-      /* img {
-        border-top-left-radius: 20px;
-        border-bottom-left-radius: 20px;
-      } */
-      .login-btn {
-        border: none;
-        outline: none;
-        height: 50px;
-        width: 100%;
-        background-color: black;
-        color: white;
-        border-radius: 4px;
-        font-weight: bold;
-      }
-      .login-btn:hover {
-        background: white;
-        border: 5px solid rgb(200, 199, 247) ;
-        color: black;
-      }
-      /* .form-control{
-                    input[type=text]:focus {
-                    border: 3px solid #555;
-                    }
-                } */
-    </style>
-  </head>
-  <body class="animsition">
-    <!-- Header -->
-    <header>
-      <!-- Header desktop -->
-      <div class="container-menu-desktop">
-        <!-- Topbar -->
-        <div class="top-bar">
-          <div class="content-topbar flex-sb-m h-full container">
-            <div class="left-top-bar">
-              Free shipping for standard order over $100
-            </div>
-
-            <div class="right-top-bar flex-w h-full">
-              <a href="#" class="flex-c-m trans-04 p-lr-25"> Help & FAQs </a>
-
-              <a href="#" class="flex-c-m trans-04 p-lr-25"> My Account </a>
-
-              <a href="#" class="flex-c-m trans-04 p-lr-25"> EN </a>
-
-              <a href="#" class="flex-c-m trans-04 p-lr-25"> USD </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="wrap-menu-desktop">
-          <nav class="limiter-menu-desktop container">
-
-            <!-- Logo desktop -->
-            <a href="#" class="logo">
-              <img src="{% static 'website/images/icons/raah-logo.png' %}" alt="IMG-LOGO" />
-            </a>
-
-            <!-- Menu desktop -->
-            <div class="menu-desktop">
-              <ul class="main-menu">
-                <li class="active-menu">
-                  <a href="index.html">Home</a>
-<!--                  <ul class="sub-menu">-->
-<!--                    <li>-->
-<!--                      <a href="index.html"></a>-->
-<!--                    </li>-->
-<!--                    <li>-->
-<!--                      <a href="home-02.html">Homepage 2</a>-->
-<!--                    </li>-->
-<!--                    <li>-->
-<!--                      <a href="home-03.html">Homepage 3</a>-->
-<!--                    </li>-->
-<!--                  </ul>-->
-                </li>
-
-                <li>
-                  <a href="product.html">Shop</a>
-                </li>
-                <li>
-                  <a href="about.html">About</a>
-                </li>
-
-                <li>
-                  <a href="contact.html">Contact</a>
-                </li>
-              </ul>
-            </div>
-
-            <!-- Icon header -->
-            <div class="wrap-icon-header flex-w flex-r-m">
-              <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search"
-              >
-                <i class="zmdi zmdi-search"></i>
-              </div>
-
-              <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
-                data-notify="2"
-              >
-                <i class="zmdi zmdi-shopping-cart"></i>
-              </div>
-
-              <a
-                href="#"
-                class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                data-notify="0"
-              >
-                <i class="zmdi zmdi-favorite-outline"></i>
-              </a>
-              <button
-                type="button"
-                class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11"
-                data-toggle="modal"
-                data-target="#loginModal"
-              >
-                <i class="fa fa-user" aria-hidden="true"></i>
-              </button>
-              <!-- Button trigger modal -->
-              <!--<button type="button" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11" data-toggle="modal" data-target="#loginModal">
-                                                                                                                    <i class="fa fa-user" aria-hidden="true"></i>
-                                                                                                                </button>-->
-            </div>
-          </nav>
-        </div>
-      </div>
-
-      <!-- Header Mobile -->
-      <div class="wrap-header-mobile">
-        <!-- Logo moblie -->
-        <div class="logo-mobile">
-          <a href="index.html"
-            ><img src="{% static 'website/images/icons/logo-01.png' %}" alt="IMG-LOGO"
-          /></a>
-        </div>
-
-        <!-- Icon header -->
-        <div class="wrap-icon-header flex-w flex-r-m m-r-15">
-          <div
-            class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search"
-          >
-            <i class="zmdi zmdi-search"></i>
-          </div>
-
-          <div
-            class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart"
-            data-notify="2"
-          >
-            <i class="zmdi zmdi-shopping-cart"></i>
-          </div>
-
-          <a
-            href="#"
-            class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti"
-            data-notify="0"
-          >
-            <i class="zmdi zmdi-favorite-outline"></i>
-          </a>
-        </div>
-
-        <!-- Button show menu -->
-        <div class="btn-show-menu-mobile hamburger hamburger--squeeze">
-          <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-          </span>
-        </div>
-      </div>
-
-      <!-- Menu Mobile -->
-      <div class="menu-mobile">
-        <ul class="topbar-mobile">
-          <li>
-            <div class="left-top-bar">
-              Free shipping for standard order over $100
-            </div>
-          </li>
-
-          <li>
-            <div class="right-top-bar flex-w h-full">
-              <a href="#" class="flex-c-m p-lr-10 trans-04"> Help & FAQs </a>
-
-              <a href="#" class="flex-c-m p-lr-10 trans-04"> My Account </a>
-
-              <a href="#" class="flex-c-m p-lr-10 trans-04"> EN </a>
-
-              <a href="#" class="flex-c-m p-lr-10 trans-04"> USD </a>
-            </div>
-          </li>
-        </ul>
-
-        <ul class="main-menu-m">
-          <li>
-            <a href="index.html">Home</a>
-            <ul class="sub-menu-m">
-              <li>
-                <a href="index.html">Homepage 1</a>
-              </li>
-              <li>
-                <a href="home-02.html">Homepage 2</a>
-              </li>
-              <li>
-                <a href="home-03.html">Homepage 3</a>
-              </li>
-            </ul>
-            <span class="arrow-main-menu-m">
-              <i class="fa fa-angle-right" aria-hidden="true"></i>
-            </span>
-          </li>
-
-          <li>
-            <a href="product.html">Shop</a>
-          </li>
-          <li>
-            <a href="about.html">About</a>
-          </li>
-
-          <li>
-            <a href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
+{% block content %}
 
       <!-- Modal Search -->
       <div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
@@ -973,7 +640,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-01.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product1.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1020,7 +687,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-02.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product2.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1067,7 +734,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-03.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product3.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1114,7 +781,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-04.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product4.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1161,7 +828,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-05.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product5.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1208,7 +875,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-06.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product6.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1255,7 +922,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-07.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product7.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1302,7 +969,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-08.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product8.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1349,7 +1016,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-09.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product9.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1396,7 +1063,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-10.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product10.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1443,7 +1110,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-11.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product11.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1490,7 +1157,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-12.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product12.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1537,7 +1204,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-13.jpg' %}" alt="IMG-PRODUCT' %}" />
+                <img src="{% static 'website/images/product13.jpg' %}" alt="IMG-PRODUCT' %}" />
 
                 <a
                   href="#"
@@ -1584,7 +1251,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-14.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product14.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1631,7 +1298,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-15.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product15.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -1678,7 +1345,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product-16.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product16.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -2317,5 +1984,4 @@
     </script>
     <!--===============================================================================================-->
     <script src="{% static 'website/js/main.js' %}"></script>
-  </body>
-</html>
+  {% endblock %}
