product model changed

--- a/raah/website/templates/index.html
+++ b/raah/website/templates/index.html
@@ -1572,17 +1572,17 @@
                   <div class="slick3 gallery-lb">
                     <div
                       class="item-slick3"
-                      data-thumb="{% static 'website/images/product-detail-01.jpg' %}"
+                      data-thumb="{% static 'website/images/product1.jpg' %}"
                     >
                       <div class="wrap-pic-w pos-relative">
                         <img
-                          src="{% static 'website/images/product-detail-01.jpg' %}"
+                          src="{% static 'website/images/product1.jpg' %}"
                           alt="IMG-PRODUCT"
                         />
 
                         <a
                           class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04"
-                          href="{% static 'website/images/product-detail-01.jpg' %}"
+                          href="{% static 'website/images/product1.jpg' %}"
                         >
                           <i class="fa fa-expand"></i>
                         </a>
@@ -1755,7 +1755,7 @@
       </div>
     </div>
 
-    <!-- Modal -->
+    <!-- LoginModal -->
     <div
       class="modal fade login-modal"
       id="loginModal"
@@ -1850,6 +1850,8 @@
                         name=""
                         placeholder="Confirm Password" class="form-control my-3 p-3/"
                       />
+                      <input type="text" name="" placeholder="Address" class="form-control my-3 p-3/">
+                      <input type="text" name="" placeholder="Phone Number" class="form-control my-3 p-3/">
                       <button type="button" class="login-btn mt-3 mb-5">Sign</button>
                       <p class="signup">
                         Already have an account ?
