products added to database

--- a/raah/website/templates/base.html
+++ b/raah/website/templates/base.html
@@ -277,15 +277,10 @@
           </li>
 
           <li>
-            <a href="shoping-cart.html" class="label1 rs1" data-label1="hot"
+            <a href="cart.html" class="label1 rs1" data-label1="hot"
               >Features</a
             >
           </li>
-
-          <li>
-            <a href="blog.html">Blog</a>
-          </li>
-
           <li>
             <a href="about.html">About</a>
           </li>
