--- a/raah/website/templates/product.html
+++ b/raah/website/templates/product.html
@@ -870,7 +870,7 @@
             <!-- Block2 -->
             <div class="block2">
               <div class="block2-pic hov-img0">
-                <img src="{% static 'website/images/product29.jpg' %}" alt="IMG-PRODUCT" />
+                <img src="{% static 'website/images/product32.jpg' %}" alt="IMG-PRODUCT" />
 
                 <a
                   href="#"
@@ -886,7 +886,7 @@
                     href="product-detail.html"
                     class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6"
                   >
-                    Wings t-shirt
+                    Mandala t-shirt
                   </a>
 
                   <span class="stext-105 cl3"> Rs. 600 </span>
@@ -1027,7 +1027,7 @@
                     href="product-detail.html"
                     class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6"
                   >
-                    Chitwan national part printed t-shirt
+                    Chitwan national park t-shirt
                   </a>
 
                   <span class="stext-105 cl3"> Rs. 500 </span>
@@ -1950,7 +1950,14 @@
                 <span class="mtext-106 cl2"> Rs. 600 </span>
 
                 <p class="stext-102 cl3 p-t-23">
-                  One piece anime printed unisex nylon t-shirt. Available in various sizes and in two different colors.
+					The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  DDF print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>
                 </p>
 
                 <!--  -->
@@ -2112,8 +2119,14 @@
                 <span class="mtext-106 cl2"> Rs. 600 </span>
 
                 <p class="stext-102 cl3 p-t-23">
-                 Skull printed unisex nylon t-shirt. Available in various sizes and in two different colors.
-                </p>
+					The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  DDF print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>                </p>
 
                 <!--  -->
                 <div class="p-t-33">
@@ -2274,8 +2287,15 @@
                 <span class="mtext-106 cl2"> Rs. 500 </span>
 
                 <p class="stext-102 cl3 p-t-23">
-                  Swayambhu eyes printed unisex cotton t-shirt. Available in various sizes and in various different colors.
-                </p>
+				  The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  Rubber print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>
+				</p>
 
                 <!--  -->
                 <div class="p-t-33">
@@ -2755,8 +2775,15 @@
                 <span class="mtext-106 cl2"> Rs. 500 </span>
 
                 <p class="stext-102 cl3 p-t-23">
-                  Mt.Everest printed t-shirt in cotton cloth. 100% authentic and long lasting print. Availbale in different size and n different colors.
-                </p>
+				  The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  Rubber print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>
+				</p>
 
                 <!--  -->
                 <div class="p-t-33">
@@ -2891,17 +2918,17 @@
                   <div class="slick3 gallery-lb">
                     <div
                       class="item-slick3"
-                      data-thumb="{% static 'website/images/product29.jpg' %}"
+                      data-thumb="{% static 'website/images/product32.jpg' %}"
                     >
                       <div class="wrap-pic-w pos-relative">
                         <img
-                          src="{% static 'website/images/product29.jpg' %}"
+                          src="{% static 'website/images/product32.jpg' %}"
                           alt="IMG-PRODUCT"
                         />
 
                         <a
                           class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04"
-                          href="{% static 'website/images/product29.jpg' %}"
+                          href="{% static 'website/images/product32.jpg' %}"
                         >
                           <i class="fa fa-expand"></i>
                         </a>
@@ -2914,14 +2941,20 @@
             <div class="col-md-6 col-lg-5 p-b-30">
               <div class="p-r-50 p-t-5 p-lr-0-lg">
                 <h4 class="mtext-105 cl2 js-name-detail p-b-14">
-                  Wings t-shirt
+                  Mandala t-shirt
                 </h4>
 
                 <span class="mtext-106 cl2"> Rs. 600 </span>
 
                 <p class="stext-102 cl3 p-t-23">
-                  Digital Wings printed t-shirt in nylon cloth. Available in two different color and in various sizes.
-                </p>
+					The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  Rubber print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>                </p>
 
                 <!--  -->
                 <div class="p-t-33">
@@ -3392,14 +3425,21 @@
             <div class="col-md-6 col-lg-5 p-b-30">
               <div class="p-r-50 p-t-5 p-lr-0-lg">
                 <h4 class="mtext-105 cl2 js-name-detail p-b-14">
-                  Chitwan national park t-shirt. Available in different color and in different sizes.
+                  Chitwan national park t-shirt.
                 </h4>
 
                 <span class="mtext-106 cl2"> Rs. 500 </span>
 
                 <p class="stext-102 cl3 p-t-23">
-                  Chitwan national park printed t-shirt. Available in different color and in different sizes.
-                </p>
+The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  Rubber print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>
+				</p>
 
                 <!--  -->
                 <div class="p-t-33">
@@ -3721,8 +3761,14 @@
                 <span class="mtext-106 cl2"> Rs. 600 </span>
 
                 <p class="stext-102 cl3 p-t-23">
-                  Anime printed unisex t-shirt in nylon cloth. Available in two fifferent color and in various sizes.
-                </p>
+The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  DDF print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>                </p>
 
                 <!--  -->
                 <div class="p-t-33">
@@ -4197,8 +4243,14 @@
                 <span class="mtext-106 cl2"> Rs. 600</span>
 
                 <p class="stext-102 cl3 p-t-23">
-                  Fire skull printed nylon unisex t-shirt. Available in two different color and in various sizes.
-                </p>
+The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  DDF print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>                </p>
 
                 <!--  -->
                 <div class="p-t-33">
@@ -4517,8 +4569,14 @@
                 <span class="mtext-106 cl2"> Rs. 500 </span>
 
                 <p class="stext-102 cl3 p-t-23">
-                  Ganesh printed unisex cotton t-shirt. Available in different colors and in idfferent sizes.
-                </p>
+The standard, traditional t-shirt for everyday wear<br>
+                  Classic, generous, boxy fit<br>
+                  Fabric: 100% Cotton<br>
+                  Sleeves: Half Sleeves<br>
+                  Rubber print<br>
+                  Round Neck<br>
+                  Soft and lightweight for the summer season<br>
+                  Different sizes available<br>                </p>
 
                 <!--  -->
                 <div class="p-t-33">
