--- a/raah/website/templates/index.html
+++ b/raah/website/templates/index.html
@@ -656,10 +656,10 @@
                     href="product-detail.html"
                     class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6"
                   >
-                    One piece t-shirt
+                    {{products.product_name}}
                   </a>
 
-                  <span class="stext-105 cl3"> Rs. 600 </span>
+                  <span class="stext-105 cl3"> Rs. {{products.price}}</span>
                 </div>
 
                 <div class="block2-txt-child2 flex-r p-t-3">
@@ -682,7 +682,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item t-shirts">
             <!-- Block2 -->
             <div class="block2">
@@ -703,7 +702,7 @@
                     href="product-detail.html"
                     class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6"
                   >
-                    Skull t-shirt
+                    {{products.product_name}}
                   </a>
 
                   <span class="stext-105 cl3"> Rs. 600 </span>
@@ -750,7 +749,7 @@
                     href="product-detail.html"
                     class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6"
                   >
-                    Buddha eyes t-shirt
+                  Buddha eyes t-shirt
                   </a>
 
                   <span class="stext-105 cl3"> Rs. 500 </span>
@@ -1995,10 +1994,10 @@
             <div class="col-md-6 col-lg-5 p-b-30">
               <div class="p-r-50 p-t-5 p-lr-0-lg">
                 <h4 class="mtext-105 cl2 js-name-detail p-b-14">
-                  Onepiece t-shirt
+                  {{products.product_name}}
                 </h4>
 
-                <span class="mtext-106 cl2"> Rs. 600 </span>
+                <span class="mtext-106 cl2"> Rs. {{products.price}} </span>
 
                 <p class="stext-102 cl3 p-t-23">
 <!--                  One piece anime printed unisex nylon t-shirt. Available in various sizes and in two different colors.-->
@@ -2165,7 +2164,7 @@
             <div class="col-md-6 col-lg-5 p-b-30">
               <div class="p-r-50 p-t-5 p-lr-0-lg">
                 <h4 class="mtext-105 cl2 js-name-detail p-b-14">
-                 Skull t-shirt
+                  {{product.product_name}}
                 </h4>
 
                 <span class="mtext-106 cl2"> Rs. 600 </span>
