--- a/raah/website/templates/product.html
+++ b/raah/website/templates/product.html
@@ -604,10 +604,10 @@
                     href="product-detail.html"
                     class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6"
                   >
-                    One piece t-shirt
+                    {{products.product_name}}
                   </a>
 
-                  <span class="stext-105 cl3"> Rs. 600 </span>
+                  <span class="stext-105 cl3"> Rs. {{products.price}}</span>
                 </div>
 
                 <div class="block2-txt-child2 flex-r p-t-3">
@@ -1944,10 +1944,10 @@
             <div class="col-md-6 col-lg-5 p-b-30">
               <div class="p-r-50 p-t-5 p-lr-0-lg">
                 <h4 class="mtext-105 cl2 js-name-detail p-b-14">
-                  Onepiece t-shirt
+					{{product.product_name}}
                 </h4>
 
-                <span class="mtext-106 cl2"> Rs. 600 </span>
+                <span class="mtext-106 cl2"> Rs. {{product.price} </span>
 
                 <p class="stext-102 cl3 p-t-23">
 					The standard, traditional t-shirt for everyday wear<br>
