--- a/raah/website/templates/index.html
+++ b/raah/website/templates/index.html
@@ -3,6 +3,23 @@
 
 {% block content %}
 
+<!-- This code loops through all products in the dababase -->
+{% for productList in products %}
+
+<h1>
+
+  {{productList.product_name}}
+</h1>
+<img src="{{productList.image}}" style="height: 300px;" ><br>
+<h1>
+
+  {{productList.category}}
+
+{% endfor %}
+
+<!-- This code loops through all products in the dababase -->
+
+
       <!-- Modal Search -->
       <div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
         <div class="container-search-header">
@@ -634,7 +651,7 @@
             </div>
           </div>
         </div>
-
+   
         <div class="row isotope-grid">
           <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item t-shirts">
             <!-- Block2 -->
