--- a/raah/website/templates/base.html
+++ b/raah/website/templates/base.html
@@ -138,15 +138,18 @@
                     border: 3px solid #555;
                     }
                 } */
+
+
+
     </style>
 </head>
 {% for message in messages %}
-    <!--alert message in form-->
-    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-        <strong>Message: </strong> {{message}}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    {% endfor %}
+<!--alert message in form-->
+<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+    <strong>Message: </strong> {{message}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
 <body class="animsition">
 <!-- Header -->
 <header>
@@ -185,17 +188,6 @@
                     <ul class="main-menu">
                         <li>
                             <a href="index.html">Home</a>
-                            <!--                  <ul class="sub-menu">-->
-                            <!--                    <li>-->
-                            <!--                      <a href="index.html"></a>-->
-                            <!--                    </li>-->
-                            <!--                    <li>-->
-                            <!--                      <a href="home-02.html">Homepage 2</a>-->
-                            <!--                    </li>-->
-                            <!--                    <li>-->
-                            <!--                      <a href="home-03.html">Homepage 3</a>-->
-                            <!--                    </li>-->
-                            <!--                  </ul>-->
                         </li>
 
                         <li>
@@ -212,6 +204,7 @@
                 </div>
 
                 <!-- Icon header -->
+                <div class="ml-auto">
                 <div class="wrap-icon-header flex-w flex-r-m">
                     <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search"
                     >
@@ -231,6 +224,20 @@
                     >
                         <i class="zmdi zmdi-favorite-outline"></i>
                     </a>
+                    {% if user.is_authenticated %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle m-l-10" href="#" id="navbarDropdown" role="button"
+                               data-toggle="dropdown" aria-expanded="false">
+                                Welcome {{request.user}}
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/logout">Logout</a>
+                            </div>
+                        </li>
+                    </ul>
+
+                    {% else %}
                     <button
                             type="button"
                             class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11"
@@ -239,6 +246,8 @@
                     >
                         <i class="fa fa-user" aria-hidden="true"></i>
                     </button>
+                    {% endif %}
+                    </div>
                     <!-- Button trigger modal -->
                     <!--<button type="button" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11" data-toggle="modal" data-target="#loginModal">                                                                                                 </button>-->
                 </div>
@@ -640,14 +649,16 @@
                                 <img src="{% static 'website/images\log2.jpg' %}" alt="">
                             </div>
                             <div class="formBx">
-                                <form action="/signin" method="post">
+                                <form action="/login" method="post">
                                     {% csrf_token %}
                                     <h2>Sign In</h2>
-                                    <input type="email" id="loginemail" name="email" placeholder="Enter your email"
+                                    <input type="text" id="loginusername" name="loginusername"
+                                           placeholder="Enter username"
                                            class="form-control my-3 p-3/" required>
-                                    <input type="password" id="pass" name="pass" placeholder="Enter your password"
+                                    <input type="password" id="loginpass" name="loginpass"
+                                           placeholder="Enter your password"
                                            class="form-control my-3 p-3/" required>
-                                    <button type="button" class="login-btn mt-3 mb-5">Login</button>
+                                    <button type="submit" class="login-btn mt-3 mb-5">Login</button>
                                     <p class="signup">
                                         Don't have an account?
                                         <a href="#" onclick="toggleForm();">Sign Up.</a>
@@ -672,10 +683,10 @@
                                            class="form-control my-3 p-3/" required>
                                     <input type="password" id="pass2" name="pass2" placeholder="Confirm Password"
                                            class="form-control my-3 p-3/" required>
-                                    <button type="submit" class="login-btn mt-3 mb-5">Sign In</button>
+                                    <button type="submit" class="login-btn mt-3 mb-5">Sign Up</button>
                                     <p class="signup">
                                         Already have an account ?
-                                        <a href="#" onclick="toggleForm();">Sign Up.</a>
+                                        <a href="#" onclick="toggleForm();">Sign In.</a>
                                     </p>
                                 </form>
                             </div>
@@ -711,10 +722,6 @@
 
 
 
-
-
-
-
 </script>
 <!--===============================================================================================-->
 <script src="{% static 'website/vendor/daterangepicker/moment.min.js' %}"></script>
@@ -726,10 +733,6 @@
 <script src="{% static 'website/vendor/parallax100/parallax100.js' %}"></script>
 <script>
       $(".parallax100").parallax100();
-
-
-
-
 
 
 
@@ -748,10 +751,6 @@
           mainClass: "mfp-fade",
         });
       });
-
-
-
-
 
 
 
@@ -808,10 +807,6 @@
 
 
 
-
-
-
-
 </script>
 <!--===============================================================================================-->
 <script src="{% static 'website/vendor/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
@@ -847,6 +842,9 @@
                 $("header").removeClass('header-v4');
             }
      });
+
+
+
 
 
 </script>
