alert message displayed

--- a/raah/static/website/css/main.css
+++ b/raah/static/website/css/main.css
@@ -1976,7 +1976,9 @@ input.num-product::-webkit-inner-spin-button {
   line-height: 1.6;
 }
 
-
+.nav-link{
+color:black;
+}
 
 /*//////////////////////////////////////////////////////////////////
 [ Block1 ]*/
