--- a/raah/website/templates/base.html
+++ b/raah/website/templates/base.html
@@ -141,13 +141,22 @@
 
 
 
+
+
+
+
+
     </style>
 </head>
 {% for message in messages %}
 <!--alert message in form-->
-<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+<div class="alert alert-{{ message.tags }} alert-dismissible fade show w-100 position-absolute"
+     style="z-index:1;position:absolute;width:100%;height:50px;border-radius:0;"
+     role="alert">
     <strong>Message: </strong> {{message}}
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 {% endfor %}
 <body class="animsition">
@@ -205,48 +214,47 @@
 
                 <!-- Icon header -->
                 <div class="ml-auto">
-                <div class="wrap-icon-header flex-w flex-r-m">
-                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search"
-                    >
-                        <i class="zmdi zmdi-search"></i>
-                    </div>
+                    <div class="wrap-icon-header flex-w flex-r-m">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search"
+                        >
+                            <i class="zmdi zmdi-search"></i>
+                        </div>
 
-                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
-                         data-notify="2"
-                    >
-                        <i class="zmdi zmdi-shopping-cart"></i>
-                    </div>
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
+                             data-notify="2"
+                        >
+                            <i class="zmdi zmdi-shopping-cart"></i>
+                        </div>
 
-                    <a
-                            href="#"
-                            class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                            data-notify="0"
-                    >
-                        <i class="zmdi zmdi-favorite-outline"></i>
-                    </a>
-                    {% if user.is_authenticated %}
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle m-l-10" href="#" id="navbarDropdown" role="button"
-                               data-toggle="dropdown" aria-expanded="false">
-                                Welcome {{request.user}}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/logout">Logout</a>
-                            </div>
-                        </li>
-                    </ul>
-
-                    {% else %}
-                    <button
-                            type="button"
-                            class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11"
-                            data-toggle="modal"
-                            data-target="#loginModal"
-                    >
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                    </button>
-                    {% endif %}
+                        <a
+                                href="#"
+                                class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+                                data-notify="0"
+                        >
+                            <i class="zmdi zmdi-favorite-outline"></i>
+                        </a>
+                        {% if user.is_authenticated %}
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle m-l-10" href="#" id="navbarDropdown" role="button"
+                                   data-toggle="dropdown" aria-expanded="false">
+                                    Welcome {{request.user}}
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="/logout">Logout</a>
+                                </div>
+                            </li>
+                        </ul>
+                        {% else %}
+                        <button
+                                type="button"
+                                class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11"
+                                data-toggle="modal"
+                                data-target="#loginModal"
+                        >
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                        </button>
+                        {% endif %}
                     </div>
                     <!-- Button trigger modal -->
                     <!--<button type="button" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11" data-toggle="modal" data-target="#loginModal">                                                                                                 </button>-->
@@ -719,9 +727,6 @@
           dropdownParent: $(this).next(".dropDownSelect2"),
         });
       });
-
-
-
 </script>
 <!--===============================================================================================-->
 <script src="{% static 'website/vendor/daterangepicker/moment.min.js' %}"></script>
@@ -733,9 +738,6 @@
 <script src="{% static 'website/vendor/parallax100/parallax100.js' %}"></script>
 <script>
       $(".parallax100").parallax100();
-
-
-
 </script>
 <!--===============================================================================================-->
 <script src="{% static 'website/vendor/MagnificPopup/jquery.magnific-popup.min.js' %}"></script>
@@ -751,9 +753,6 @@
           mainClass: "mfp-fade",
         });
       });
-
-
-
 </script>
 <!--===============================================================================================-->
 <script src="{% static 'website/vendor/isotope/isotope.pkgd.min.js' %}"></script>
@@ -805,8 +804,6 @@
         });
       });
 
-
-
 </script>
 <!--===============================================================================================-->
 <script src="{% static 'website/vendor/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
@@ -842,11 +839,6 @@
                 $("header").removeClass('header-v4');
             }
      });
-
-
-
-
-
 </script>
 <!--===============================================================================================-->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script>
