about and contact page updated

--- a/raah/website/templates/about.html
+++ b/raah/website/templates/about.html
@@ -4,16 +4,16 @@
 {% block content %}
 <!-- Title page -->
 <section class="bg-img1 txt-center p-lr-15 p-tb-92"
-         style="background-image: url({% static 'website/images/bg-01.jpg' %}">
+         style="background-image: url({% static 'website/images/bg.jpg' %}">
     <h2 class="ltext-105 cl0 txt-center">
         About
     </h2>
 </section>
 
 <!-- Content page -->
-<section class="bg0 p-t-75 p-b-120">
+<section class="bg0 p-t-75 p-b-100">
     <div class="container">
-        <div class="row p-b-148">
+        <div class="row p-b-110">
             <div class="col-md-7 col-lg-8">
                 <div class="p-t-7 p-r-85 p-r-15-lg p-r-0-md">
                     <h3 class="mtext-111 cl2 p-b-16">
@@ -21,28 +21,18 @@
                     </h3>
 
                     <p class="stext-113 cl6 p-b-26">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consequat consequat enim, non
-                        auctor massa ultrices non. Morbi sed odio massa. Quisque at vehicula tellus, sed tincidunt
-                        augue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                        Maecenas varius egestas diam, eu sodales metus scelerisque congue. Pellentesque habitant morbi
-                        tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas gravida justo eu arcu
-                        egestas convallis. Nullam eu erat bibendum, tempus ipsum eget, dictum enim. Donec non neque ut
-                        enim dapibus tincidunt vitae nec augue. Suspendisse potenti. Proin ut est diam. Donec
-                        condimentum euismod tortor, eget facilisis diam faucibus et. Morbi a tempor elit.
+                        Raah Screen Print is a printing company which was established in 1994 AD. It has been effectively
+                        running for last 28 years. Raah Screen Print is located in Teku, Kathmandu. It is a small scale
+                        business run by small group of people. We provide different kind of products.we produces good-quality
+                        prints at affordable prices.We provide all kinds of printing products which can be served as gifts
+                        and souvenirs on any occasion.We serve products like cups, multicolor t-shirts, masks, cushions,
+                        bags, bottles, mousepads, digital t-shirts, etc. It is a business run by a small family with 100%
+                        authentic and guaranteed prints.
                     </p>
 
                     <p class="stext-113 cl6 p-b-26">
-                        Donec gravida lorem elit, quis condimentum ex semper sit amet. Fusce eget ligula magna. Aliquam
-                        aliquam imperdiet sodales. Ut fringilla turpis in vehicula vehicula. Pellentesque congue ac orci
-                        ut gravida. Aliquam erat volutpat. Donec iaculis lectus a arcu facilisis, eu sodales lectus
-                        sagittis. Etiam pellentesque, magna vel dictum rutrum, neque justo eleifend elit, vel tincidunt
-                        erat arcu ut sem. Sed rutrum, turpis ut commodo efficitur, quam velit convallis ipsum, et
-                        maximus enim ligula ac ligula.
-                    </p>
-
-                    <p class="stext-113 cl6 p-b-26">
-                        Any questions? Let us know in store at 8th floor, 379 Hudson St, New York, NY 10018 or call us
-                        on (+1) 96 716 6879
+                        Any questions? Let us know in store at Teku, Kathmandu or call us
+                        on (+977) 98 4124 6413
                     </p>
                 </div>
             </div>
@@ -50,7 +40,7 @@
             <div class="col-11 col-md-5 col-lg-4 m-lr-auto">
                 <div class="how-bor1 ">
                     <div class="hov-img0">
-                        <img src="{% static 'website/images/about-01.jpg' %}" alt="IMG">
+                        <img src="{% static 'website/images/about1.jpg' %}" alt="IMG">
                     </div>
                 </div>
             </div>
@@ -64,14 +54,13 @@
                     </h3>
 
                     <p class="stext-113 cl6 p-b-26">
-                        Mauris non lacinia magna. Sed nec lobortis dolor. Vestibulum rhoncus dignissim risus, sed
-                        consectetur erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-                        turpis egestas. Nullam maximus mauris sit amet odio convallis, in pharetra magna gravida.
-                        Praesent sed nunc fermentum mi molestie tempor. Morbi vitae viverra odio. Pellentesque ac velit
-                        egestas, luctus arcu non, laoreet mauris. Sed in ipsum tempor, consequat odio in, porttitor
-                        ante. Ut mauris ligula, volutpat in sodales in, porta non odio. Pellentesque tempor urna vitae
-                        mi vestibulum, nec venenatis nulla lobortis. Proin at gravida ante. Mauris auctor purus at lacus
-                        maximus euismod. Pellentesque vulputate massa ut nisl hendrerit, eget elementum libero iaculis.
+                        As Raah Screen Print has been succesfully running for last 28 years effectively by providing wide
+                        range of printing facilities at affordable prices. We still aim to provide much better services to
+                        our customer that will provide maximum customer satisfaction. We also provide individual customization
+                        on any products available with us. Our main aim is to be more creative, bring even more new ideas
+                        and provide maximum satisfaction and reach as much
+                        people as possible. In order to grow our business we focus on our targeted customer and provide
+                        maximum satisfaction and give the best services to our customers.
                     </p>
 
                     <div class="bor16 p-l-29 p-b-9 m-t-22">
@@ -81,9 +70,8 @@
                             seemed obvious to them after a while.
                         </p>
 
-                        <span class="stext-111 cl8">
-								- Steve Job’s 
-							</span>
+<!--                        <span class="stext-111 cl8">-->
+<!--							</span>-->
                     </div>
                 </div>
             </div>
@@ -91,7 +79,7 @@
             <div class="order-md-1 col-11 col-md-5 col-lg-4 m-lr-auto p-b-30">
                 <div class="how-bor2">
                     <div class="hov-img0">
-                        <img src="{% static 'website/images/about-02.jpg' %}" alt="IMG">
+                        <img src="{% static 'website/images/about2.jpg' %}" alt="IMG">
                     </div>
                 </div>
             </div>
