--- a/raah/website/templates/index.html
+++ b/raah/website/templates/index.html
@@ -205,3 +205,8 @@
 {% include 'product1.html' with productList=productList%}
 
 {% endblock %}
+
+<!--Js Cart Block-->
+{% block js %}
+
+{% endblock %}
