--- a/raah/website/templates/contact.html
+++ b/raah/website/templates/contact.html
@@ -6,7 +6,7 @@
 <!-- Title page -->
 <section
         class="bg-img1 txt-center p-lr-15 p-tb-92"
-        style="background-image: url({% static 'website/images/bg-01.jpg' %})"
+        style="background-image: url({% static 'website/images/bg.jpg' %})"
 >
     <h2 class="ltext-105 cl0 txt-center">Contact</h2>
 </section>
