--- a/raah/website/templates/product.html
+++ b/raah/website/templates/product.html
@@ -412,7 +412,7 @@
                                                 </div>
 
                                                 <button
-                                                        class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail cart"
+                                                        class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail addtocart" data-action="add"  data-product="{{product.reference_id}}"
                                                 >
                                                     Add to cart
                                                 </button>
