--- a/raah/website/templates/contact.html
+++ b/raah/website/templates/contact.html
@@ -18,7 +18,7 @@
             <div
                     class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md"
             >
-                <form>
+                <form action="post">{% csrf_token %}
                     <h4 class="mtext-105 cl2 txt-center p-b-30">Send Us A Message</h4>
 
                     <div class="bor8 m-b-20 how-pos4-parent">
@@ -26,6 +26,7 @@
                                 class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30"
                                 type="text"
                                 name="email"
+                                id = "email"
                                 placeholder="Your Email Address"
                         />
                         <img
@@ -39,6 +40,7 @@
                 <textarea
                         class="stext-111 cl2 plh3 size-120 p-lr-28 p-tb-25"
                         name="msg"
+                        id="msg"
                         placeholder="How Can We Help?"
                 ></textarea>
                     </div>
