contact page updated

--- a/raah/website/templates/contact.html
+++ b/raah/website/templates/contact.html
@@ -18,7 +18,7 @@
             <div
                     class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md"
             >
-                <form action="post">{% csrf_token %}
+                <form method="post" action="contact.html">{% csrf_token %}
                     <h4 class="mtext-105 cl2 txt-center p-b-30">Send Us A Message</h4>
 
                     <div class="bor8 m-b-20 how-pos4-parent">
@@ -46,6 +46,7 @@
                     </div>
 
                     <button
+                            type="submit"
                             class="flex-c-m stext-101 cl0 size-121 bg3 bor1 hov-btn3 p-lr-15 trans-04 pointer"
                     >
                         Submit
