--- a/raah/website/templates/cart.html
+++ b/raah/website/templates/cart.html
@@ -5,7 +5,7 @@
 <section class="bg0 p-b-140">
     <!-- breadcrumb -->
     <div class="container bg-white">
-        <div class="bread-crumb flex-w p-l-25 p-r-15 p-t-25 p-b-25 p-lr-0-lg">
+        <div class="bread-crumb flex-w p-l-25 p-r-15 p-t-120 p-lr-0-lg">
             <a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
                 Home
                 <i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
